@@ -74,14 +74,8 @@ backup_file()
     if [ X"$#" != X"0" ]; then
         for conf_file in $@; do
             if [ -f ${conf_file} ]; then
-                if [ X"${TERM}" == X"xterm" -o X"${TERM}" == X"linux" -o X"${TERM}" == X"pcconsole" ]; then
-                    if [ X"${IREDMAIL_DEBUG}" == X"YES" ]; then
-                        echo -e "\033[43m${_BACKUP_FLAG}\033[0m ${conf_file} -> $(basename ${conf_file}).${DATE}."
-                    fi
-                else
-                    if [ X"${IREDMAIL_DEBUG}" == X"YES" ]; then
-                        echo -e "${_BACKUP_FLAG} ${conf_file} -> $(basename ${conf_file}).${DATE}."
-                    fi
+                if [ X"${IREDMAIL_DEBUG}" == X"YES" ]; then
+                    echo -e "${_BACKUP_FLAG} ${conf_file} -> $(basename ${conf_file}).${DATE}."
                 fi
 
                 cp -f ${conf_file} ${conf_file}.${DATE}
