@@ -31,6 +31,7 @@ auth_verbose_passwords = no
 # SSL: Global settings.
 # Refer to wiki site for per protocol, ip, server name SSL settings:
 # http://wiki2.dovecot.org/SSL/DovecotConfiguration
+ssl_protocols = !SSLv2 !SSLv3
 ssl = required
 verbose_ssl = no
 #ssl_ca =</path/to/ca
