@@ -50,6 +50,7 @@ server {
     ssl on;
     ssl_certificate PH_SSL_CERT_FILE;
     ssl_certificate_key PH_SSL_KEY_FILE;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 
     # Deny all attempts to access hidden files such as .htaccess.
     location ~ /\. {
