@@ -20,7 +20,6 @@ http {
     keepalive_timeout 65;
     sendfile on;
 
-    client_body_temp_path PH_NGINX_CLIENT_BODY_TEMP_PATH 3 3 3;
     client_max_body_size 12m;
 
     include PH_NGINX_CONF_DIR/*.conf;
